footer Alignment Fix

--- a/css/style.css
+++ b/css/style.css
@@ -1201,8 +1201,7 @@ only screen and (max-width: 425px) {
 .f4 .centerIcon a {
     color: #000;
     font-size: 30px;
-    text-align: center;
-    margin: 30px 30px;
+    text-align: start;
 }
 
 a i {
