--- a/css/style2.css
+++ b/css/style2.css
@@ -113,6 +113,10 @@ section {
     }
 }
 
+.navbar-toggler {
+    color: #9930d6 !important;
+}
+
 /* Navbar Ends Here */
 
 
@@ -733,8 +737,7 @@ section {
 .f4 .centerIcon a {
     color: #000;
     font-size: 30px;
-    text-align: center;
-    margin: 30px 30px;
+    text-align: start;
 }
 
 a i {
